--- a/package.json
+++ b/package.json
@@ -24,6 +24,17 @@
     "jquery": "^3.5.1",
     "magnific-popup": "^1.1.0",
     "node-waves": "^0.7.6",
-    "simplebar": "^4.2.3"
+    "simplebar": "^4.2.3",
+    "bcrypt": "^5.0.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
+    "handlebars": "^4.7.6",
+    "muller": "^1.1.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql2": "^2.2.5",
+    "nodemon": "^3.1.0",
+    "sequelize": "^6.3.5"
   }
 }
