--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "private": true,
-  "name": "chatvia",
-  "version": "2.5.0",
-  "description": "",
+  "name": "buckethat",
+  "version": "1.2.0",
+  "description": "Based on chatvia by themesbrand",
   "main": "server.js",
-  "author": "Themesbrand",
+  "author": "XelaukDain",
   "browserslist": [
     "last 2 version",
     "> 2%"
@@ -18,7 +18,6 @@
     "sass": "^1.69.5"
   },
   "dependencies": {
-    "admin-resources": "git+https://github.com/themesbrand/admin-resources#master",
     "bootstrap": "5.3.2",
     "chance": "^1.1.11",
     "jquery": "^3.5.1",
